[package]
name = "platform-trees"
version = "0.1.0-beta.1"
edition = "2018"
authors = ["uselesssgoddess", "Linksplatform Team <linksplatformtechnologies@gmail.com>"]
license = "LGPL-3.0"
repository = "https://github.com/linksplatform/Collections.Methods"
homepage = "https://github.com/linksplatform/Collections.Methods/rust"
description = """
Trees methods for linksplatform
"""

rust-version = "1.65"

[dependencies]
tap = "1.0.1"
funty = "2.0"
platform-data = { version = "0.1.0-beta.3", git = "https://github.com/linksplatform/core-rs", branch = "feature/modern-api"}
